--- a/index.html
+++ b/index.html
@@ -10,12 +10,32 @@
 
 <body>
     <h1>Shkel Ira</h1>
-    <a href="https://shkelira1.github.io/homework1/"> homework 1</a>
-    <a href="https://shkelira1.github.io/homework2.1/"> homework 2.1</a>
-    <a href="https://shkelira1.github.io/homework2.2/"> homework 2.2</a>
-    <a href="https://shkelira1.github.io/homework3_1/"> homework 3.1</a>
-    <a href="https://shkelira1.github.io/homework3_2/"> homework 3.2</a>
-    <a href="https://shkelira1.github.io/homework_5/"> homework 5</a>
+    <ul style="list-style: none;">
+        <li>
+            <a href="https://shkelira1.github.io/homework1/"> homework 1</a>
+        </li>
+        <li>
+            <a href="https://shkelira1.github.io/homework2.1/"> homework 2.1</a>
+        </li>
+        <li>
+            <a href="https://shkelira1.github.io/homework2.2/"> homework 2.2</a>
+        </li>
+        <li>
+            <a href="https://shkelira1.github.io/homework3_1/"> homework 3.1</a>
+        </li>
+        <li>
+            <a href="https://shkelira1.github.io/homework3_2/"> homework 3.2</a>
+        </li>
+        <li>
+            <a href="https://shkelira1.github.io/homework_5/"> homework 5</a>
+        </li>
+    </ul>
+
+
+
+
+
+
 </body>
 
 </html>
