--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
         <li>
             <a href="https://shkelira1.github.io/homework_5/"> homework 5</a>
         </li>
+		<li>
+		<a href="https://shkelira1.github.io/homework6.1/"> homework 6.1</a>
+		</li>
     </ul>
 
 
