--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
 		<li>
 		<a href="https://shkelira1.github.io/homework6.1/"> homework 6.1</a>
 		</li>
+		<li>
+		<a href="https://shkelira1.github.io/homework6.2/."> homework 6.2</a>
+		</li>
     </ul>
 
 
