--- a/index.html
+++ b/index.html
@@ -35,9 +35,15 @@
 		<li>
 		<a href="https://shkelira1.github.io/homework6.2/."> homework 6.2</a>
 		</li>
+		<li>
+		<a href="https://shkelira1.github.io/lissen7-1/"> lisson 7</a>
+		</li>
+		<li>
+		<a href="https://shkelira1.github.io/homework7-1/."> homework 7.1</a>
+		</li>
     </ul>
 
-
+https://shkelira1.github.io/homework7-1/.
 
 
 
