--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
 		<li>
 		<a href="https://shkelira1.github.io/homework7-1/."> homework 7.1</a>
 		</li>
+		<li>
+		<a href="https://shkelira1.github.io/homework7-2/."> homework 7.2</a>
+		</li>
     </ul>
 
 https://shkelira1.github.io/homework7-1/.
