--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
 		<li>
 		<a href="https://shkelira1.github.io/homework9.1/"> homework 9.1</a>
 		</li>
+		<li>
+		<a href="https://shkelira1.github.io/homework9.2/"> homework 9.2</a>
+		</li>
     </ul>
 
 </body>
