--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
 		<li>
 		<a href="https://shkelira1.github.io/homework10.1/"> homework 10.1</a>
 		</li>
+		<li>
+		<a href="https://shkelira1.github.io/homework11.1/"> homework 11.1</a>
+		</li>
     </ul>
 
 </body>
