--- a/index.html
+++ b/index.html
@@ -60,6 +60,10 @@
 		<li>
 		<a href="https://shkelira1.github.io/homework11.1/"> homework 11.1</a>
 		</li>
+		<li>
+		<a href="https://shkelira1.github.io/homework12.2/"> homework 12.2</a>
+		</li>
+		 
     </ul>
 
 </body>
