--- a/index.html
+++ b/index.html
@@ -63,7 +63,9 @@
 		<li>
 		<a href="https://shkelira1.github.io/homework12.2/"> homework 12.2</a>
 		</li>
-		 
+		 <li>
+		<a href="https://shkelira1.github.io/OUR_TEAM/."> OUR_TEAM</a>
+		</li>
     </ul>
 
 </body>
